// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser > should parse endpoint 1`] = `
{
  "baseUrl": "https://api.themoviedb.org/3",
  "headers": {
    "accept": "application/json",
    "authorization": "xxx",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "/foo/baz",
}
`;

exports[`parser > should parse route 1`] = `
{
  "baseUrl": "https://api.themoviedb.org/3",
  "headers": {
    "accept": "application/json",
    "authorization": "xxx",
  },
  "method": "GET",
  "url": "/foo/baz",
}
`;
